--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <nav>
       <ul>
         <li>
-          <a>Sobre mim</a>
-          <a>Projetos</a>
+          <a class= "sobre">Sobre mim</a>
+          <a class= "projetos">Projetos</a>
         </li>
         
       </ul>
